--- a/View/src/main/resources/com/example/view/hello-view.fxml
+++ b/View/src/main/resources/com/example/view/hello-view.fxml
@@ -22,7 +22,9 @@
                 </toggleGroup>
             </RadioButton>
             <RadioButton fx:id="sendChoose" layoutX="318.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateChoose" text="wyslij" toggleGroup="$wariant" />
-            <Button fx:id="receive" layoutX="6.0" layoutY="110.0" mnemonicParsing="false" onAction="#sendRecord" prefHeight="18.0" prefWidth="108.0" text="Wyślij " />
+            <Button fx:id="receive" layoutX="6.0" layoutY="110.0" mnemonicParsing="false" onAction="#receiveRecord" prefHeight="18.0" prefWidth="108.0" text="Odbierz" />
+            <TextField fx:id="sampleRate" layoutX="92.0" layoutY="10.0" prefHeight="26.0" prefWidth="127.0" />
+            <Label layoutX="14.0" layoutY="14.0" text="Próbkowanie" />
          </children></AnchorPane>
    </children>
 </VBox>
